@@ -48,6 +48,21 @@
 #define NWAM_ENVIRONMENT_RENAME     "nwam_environment_rename"
 #define RENAME_ENVIRONMENT_ENTRY    "rename_environment_entry"
 
+#define PIXBUF_COMPOSITE_NO_SCALE(src, dest)                            \
+    g_message("pixbuf composite < w, h > < %d, %d >, < sw, sh > < %lf, %lf >", \
+      gdk_pixbuf_get_width(dest),                                       \
+      gdk_pixbuf_get_height(dest),                                      \
+      (double)gdk_pixbuf_get_width(dest)/gdk_pixbuf_get_width(src),     \
+      (double)gdk_pixbuf_get_height(dest)/gdk_pixbuf_get_height(src));  \
+    gdk_pixbuf_composite(GDK_PIXBUF(src), GDK_PIXBUF(dest),             \
+      0, 0,                                                             \
+      gdk_pixbuf_get_width(dest),                                       \
+      gdk_pixbuf_get_height(dest),                                      \
+      (double)0.0, (double)0.0,                                         \
+      (double)gdk_pixbuf_get_width(dest)/gdk_pixbuf_get_width(src),     \
+      (double)gdk_pixbuf_get_height(dest)/gdk_pixbuf_get_height(src),   \
+      GDK_INTERP_NEAREST, 255)
+
 struct nwamui_wifi_essid {
     gchar*                          essid;
     nwamui_wifi_security_t          security;
@@ -348,31 +363,6 @@ get_pixbuf( const gchar* stock_id, gboolean small )
     return (get_pixbuf_with_size( stock_id, small?small_icon_size:normal_icon_size ));
 }
 
-/* #define PIXBUF_COMPOSITE_NO_SCALE(src, dest)                            \ */
-/*     g_message("pixbuf composite < w, h > < %d, %d >, < sw, sh > < %lf, %lf >", \ */
-/*       gdk_pixbuf_get_width(dest),                                       \ */
-/*       gdk_pixbuf_get_height(dest),                                      \ */
-/*       (double)gdk_pixbuf_get_width(dest)/gdk_pixbuf_get_width(src),     \ */
-/*       (double)gdk_pixbuf_get_height(dest)/gdk_pixbuf_get_height(src));  \ */
-/*     gdk_pixbuf_composite(GDK_PIXBUF(src), GDK_PIXBUF(dest),             \ */
-/*       0, 0,                                                             \ */
-/*       gdk_pixbuf_get_width(dest),                                       \ */
-/*       gdk_pixbuf_get_height(dest),                                      \ */
-/*       (double)0.0, (double)0.0,                                         \ */
-/*       (double)gdk_pixbuf_get_width(dest)/gdk_pixbuf_get_width(src),     \ */
-/*       (double)gdk_pixbuf_get_height(dest)/gdk_pixbuf_get_height(src),   \ */
-/*       GDK_INTERP_NEAREST, 255) */
-
-#define PIXBUF_COMPOSITE_NO_SCALE(src, dest)                            \
-    gdk_pixbuf_composite(GDK_PIXBUF(src), GDK_PIXBUF(dest),             \
-      0, 0,                                                             \
-      MIN(gdk_pixbuf_get_width(src),gdk_pixbuf_get_width(dest)),        \
-      MIN(gdk_pixbuf_get_height(src),gdk_pixbuf_get_height(dest)),      \
-      (double)0.0, (double)0.0,                                         \
-      (double)10.2,                                                      \
-      (double)10.2,                                                      \
-      GDK_INTERP_BILINEAR, 0)
-
 /* 
  * Returns a GdkPixbuf that reflects the status of the environment
  */
@@ -381,7 +371,6 @@ nwamui_util_get_env_status_icon( GtkStatusIcon* status_icon, nwamui_env_status_t
 {
     GdkPixbuf* inf_icon = NULL;
     GdkPixbuf* net_status_icon = NULL;
-    GdkPixbuf* wireless_strength_icon = NULL;
     gint       size = -1;
     gchar *stock_id = NULL;
     gint activate_wired_num = 0;
@@ -430,15 +419,13 @@ nwamui_util_get_env_status_icon( GtkStatusIcon* status_icon, nwamui_env_status_t
     }
 
     if (activate_wireless_num > 0) {
-
         average_signal_strength /= activate_wireless_num;
-        wireless_strength_icon = nwamui_util_get_wireless_strength_icon(average_signal_strength, FALSE);
-
-        inf_icon = get_pixbuf_with_size(NWAM_ICON_WIRELESS_CONNECTED, size);
-/*         PIXBUF_COMPOSITE_NO_SCALE(wireless_strength_icon, inf_icon); */
-        g_object_unref(wireless_strength_icon);
+        inf_icon = nwamui_util_get_wireless_strength_icon(average_signal_strength, FALSE);
     } else {
-        inf_icon = get_pixbuf_with_size(NWAM_ICON_WIRED_CONNECTED, size);
+        GdkPixbuf* temp_icon = NULL;
+        temp_icon = get_pixbuf_with_size(NWAM_ICON_WIRED_CONNECTED, size);
+        inf_icon = gdk_pixbuf_copy(temp_icon);
+        g_object_unref(temp_icon);
     }
 
     switch( env_status ) {
@@ -456,7 +443,7 @@ nwamui_util_get_env_status_icon( GtkStatusIcon* status_icon, nwamui_env_status_t
             break;
     }
     net_status_icon = get_pixbuf_with_size(stock_id, size);
-/*     PIXBUF_COMPOSITE_NO_SCALE(net_status_icon, inf_icon); */
+    PIXBUF_COMPOSITE_NO_SCALE(net_status_icon, inf_icon);
     g_object_unref(net_status_icon);
 
     return( inf_icon );
@@ -605,10 +592,12 @@ nwamui_util_get_wireless_strength_icon( nwamui_wifi_signal_strength_t signal_str
 {
     static GdkPixbuf*   enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_LAST][2];
     gint                icon_size = small?0:1;
-    
+
+#if 0
+
     if ( enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_NONE][icon_size] == NULL ) {
         /* TODO - Get wireless icons to match the various strengths */
-        enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_NONE][icon_size] = 
+        enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_NONE][icon_size] =
                                     g_object_ref(get_pixbuf( NWAM_ICON_WIRELESS_STRENGTH_NONE, small ));
 
         enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_VERY_WEAK][icon_size] = 
@@ -626,7 +615,59 @@ nwamui_util_get_wireless_strength_icon( nwamui_wifi_signal_strength_t signal_str
     }
     
     return( GDK_PIXBUF(g_object_ref( G_OBJECT(enabled_wireless_icons[signal_strength][icon_size]) )) );
-    
+
+#else
+    if ( enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_NONE][icon_size] == NULL ) {
+        GdkPixbuf* inf_icon = NULL;
+        GdkPixbuf* wireless_strength_icon = NULL;
+        GdkPixbuf* composed_icon = NULL;
+
+        /* Basic interface icon. */
+        inf_icon = get_pixbuf(NWAM_ICON_WIRELESS_CONNECTED, small);
+
+        /* Compose icon. */
+        composed_icon = gdk_pixbuf_copy(inf_icon);
+        wireless_strength_icon = get_pixbuf(NWAM_ICON_WIRELESS_STRENGTH_NONE, small);
+        PIXBUF_COMPOSITE_NO_SCALE(wireless_strength_icon, composed_icon);
+        g_object_unref(wireless_strength_icon);
+
+        enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_NONE][icon_size] = composed_icon;
+          
+        composed_icon = gdk_pixbuf_copy(inf_icon);
+        wireless_strength_icon = get_pixbuf(NWAM_ICON_WIRELESS_STRENGTH_POOR, small);
+        PIXBUF_COMPOSITE_NO_SCALE(wireless_strength_icon, composed_icon);
+        g_object_unref(wireless_strength_icon);
+
+        enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_VERY_WEAK][icon_size] = composed_icon;
+        enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_WEAK][icon_size] = g_object_ref(composed_icon);
+
+        composed_icon = gdk_pixbuf_copy(inf_icon);
+        wireless_strength_icon = get_pixbuf(NWAM_ICON_WIRELESS_STRENGTH_FAIR, small);
+        PIXBUF_COMPOSITE_NO_SCALE(wireless_strength_icon, composed_icon);
+        g_object_unref(wireless_strength_icon);
+
+        enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_GOOD][icon_size] = composed_icon;
+
+        composed_icon = gdk_pixbuf_copy(inf_icon);
+        wireless_strength_icon = get_pixbuf(NWAM_ICON_WIRELESS_STRENGTH_GOOD, small);
+        PIXBUF_COMPOSITE_NO_SCALE(wireless_strength_icon, composed_icon);
+        g_object_unref(wireless_strength_icon);
+
+        enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_VERY_GOOD][icon_size]= composed_icon;
+
+        composed_icon = gdk_pixbuf_copy(inf_icon);
+        wireless_strength_icon = get_pixbuf(NWAM_ICON_WIRELESS_STRENGTH_EXCELLENT, small);
+        PIXBUF_COMPOSITE_NO_SCALE(wireless_strength_icon, composed_icon);
+        g_object_unref(wireless_strength_icon);
+
+        enabled_wireless_icons[NWAMUI_WIFI_STRENGTH_EXCELLENT][icon_size]= composed_icon;
+
+        g_object_unref(inf_icon);
+    }
+
+    return( GDK_PIXBUF(g_object_ref( G_OBJECT(enabled_wireless_icons[signal_strength][icon_size]) )) );
+
+#endif    
 }
 
 /* 
