@@ -1,3 +1,8 @@
+2009-03-26  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* common/libnwamui.c (nwamui_util_get_env_status_icon),
+	(nwamui_util_get_wireless_strength_icon): Code for composing icons.
+
 2009-03-25  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* capplet/main.c (main):
